# Big8K

./: .gitignore  AGENTS.md  README.md  build-release.ps1  capture-mipi-layout.cjs  index.html  make_icon.ps1  package-lock.json  package.json  screenshot.cjs  start-dev.ps1  verify_bin.rs
docs/: README.md  ad5272_multi_rail.py  ad5272_multi_rail_readme.md  adb-shell-8k-platform-guide.md  ca410-brightness-meter-protocol.md  ca410_protocol.md  cleanup-candidates-2026-05-04.md  code-format-concepts.md  code-review-2026-04-30.md  deployment-page-notes-2026-03-31.md  mipi-debug-notes.md  pcsw-feature-scan.csv  pcsw-migration-notes-2026-03-28.md  recent-handoffs-and-notes.md  release-code-review-2026-05-03.md  release-packaging-recommendations-2026-05-03.md  source-review-2026-05-04.md  ui-improvement-plan.md  usage-guide.md
python/: 5272.py  fb_demo.py  fb_image_display.py  fb_text_black_white.py  fb_text_custom.py  fb_text_demo.py  fb_text_poster.py  gpio_3b5.py
resources/: 01-network-manager-all.yaml  README.md  (+2 more)
src-tauri/: Cargo.toml  make_icons.py  tauri.conf.json
src-tauri/examples/: ssh_test.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: probe_device_20260422_1405.sh
src-tauri/src/: action_result.rs  adb.rs  adb_commands.rs  deploy_commands.rs  display_actions.rs  display_runtime.rs  framebuffer_commands.rs  host_env.rs  lib.rs  main.rs  mipi_commands.rs  network_commands.rs  oled_config.rs  openclaw_actions.rs  openclaw_adapter.rs  openclaw_types.rs  preset_commands.rs  remote_runtime.rs  resources.rs  shell_utils.rs  ssh_commands.rs  state.rs
(+105 files in other folders)
