[package]
name = "big8k-tauri-ui"
version = "0.1.0"
description = "Big8K Control Panel"
authors = ["you"]
edition = "2021"
default-run = "Big8K"

[[bin]]
name = "Big8K"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
