[package]
name = "big8k-tauri-ui"
version = "0.1.0"
description = "Big8K Control Panel"
authors = ["you"]
edition = "2021"
default-run = "Big8K"

[[bin]]
name = "Big8K"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "=2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rfd = "0.15"
network-interface = "2"
image = { version = "0.25", default-features = true, features = ["png", "jpeg", "bmp", "webp"], optional = true }
ssh2 = { version = "0.9", optional = true }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
ssh = ["dep:ssh2"]
image-tools = ["dep:image"]
